# OTIS-2023

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  hhh  readme.md  sonar-project.properties
trunk/II02312/task_02/src/: CMakeLists.txt  task_02.cpp
trunk/II02323/task_01/src/: CMakeLists.txt  otis_lab_01.cpp
trunk/ii002316/task_01/src/: CMakeLists.txt  lab01.cpp  lab1.cpp
trunk/ii02303/src/: CMakeLists.txt  lab1.cpp  labaa 1.cpp
trunk/ii02305/task_03/src/: CMakeLists.txt  main.py  task3.cpp  task3.py  task_03.cpp
trunk/ii02308/task_01/src/: CMakeLists.txt  Lab1Otis.cpp  Source.cpp
trunk/ii02310/task_03/src/: CMakeLists.txt  edge.h  euler.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  vertex.h
trunk/ii02310/task_03/src/OTIS333/: CMakeLists.txt  alg.h  edge.h  euler.h
trunk/ii02310/task_03/src/Qt6WidgetsTools/: Qt6WidgetsToolsConfigVersionImpl.cmake
trunk/ii02310/task_03/src/build-OTIS333-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  graph.txt
trunk/ii02310/task_03/src/build-OTIS333-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
trunk/ii02310/task_03/src/build-OTIS333-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
trunk/ii02310/task_03/src/build-OTIS333-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/OTIS333_autogen/: deps
trunk/ii02310/task_03/src/cmake/Qt63DAnimation/: Qt63DAnimationAdditionalTargetInfo.cmake  Qt63DAnimationConfigVersion.cmake  Qt63DAnimationDependencies.cmake  Qt63DAnimationTargets-relwithdebinfo.cmake  Qt63DAnimationTargets.cmake  Qt63DAnimationVersionlessTargets.cmake
trunk/ii02310/task_03/src/cmake/Qt63DCore/: Qt63DCoreAdditionalTargetInfo.cmake  Qt63DCoreConfig.cmake  Qt63DCoreDependencies.cmake  Qt63DCoreTargets-relwithdebinfo.cmake  Qt63DCoreTargets.cmake  Qt63DCoreVersionlessTargets.cmake
trunk/ii02310/task_03/src/cmake/Qt63DExtras/: Qt63DExtrasConfig.cmake  Qt63DExtrasConfigVersion.cmake  Qt63DExtrasTargets.cmake  Qt63DExtrasVersionlessTargets.cmake
trunk/ii02310/task_03/src/cmake/Qt63DInput/: Qt63DInputConfigVersion.cmake  Qt63DInputDependencies.cmake  Qt63DInputTargets-relwithdebinfo.cmake  Qt63DInputTargets.cmake
trunk/ii02310/task_03/src/cmake/Qt63DLogic/: Qt63DLogicAdditionalTargetInfo.cmake  Qt63DLogicConfig.cmake  (+3 more)
trunk/ii02310/task_03/src/lib/: Qt63DAnimation.prl  Qt63DCore.prl  Qt63DExtras.prl  Qt63DInput.prl  Qt63DLogic.prl  Qt63DQuick.prl  Qt63DQuickAnimation.prl  Qt63DQuickExtras.prl  Qt63DQuickInput.prl  Qt63DQuickRender.prl  Qt63DQuickScene2D.prl  Qt63DRender.prl  Qt6AxBase.prl  Qt6AxContainer.prl  Qt6AxServer.prl  Qt6Bluetooth.prl  Qt6Bodymovin.prl  Qt6Charts.prl  Qt6ChartsQml.prl  Qt6Concurrent.prl  Qt6Core.prl  Qt6Core5Compat.prl  Qt6DBus.prl  Qt6DataVisualization.prl  Qt6DataVisualizationQml.prl  Qt6Designer.prl  Qt6DesignerComponents.prl  Qt6DeviceDiscoverySupport.prl  Qt6EntryPoint.prl  Qt6ExampleIcons.prl  Qt6FbSupport.prl  Qt6Graphs.prl  Qt6Grpc.prl  Qt6Gui.prl  Qt6Help.prl  Qt6HttpServer.prl  Qt6InsightTracker.prl  Qt6InsightTrackerQml.prl  Qt6JsonRpc.prl  Qt6LabsAnimation.prl  (+95 more)
trunk/ii02314/task_02/src/: CMakeLists.txt  otis_2.cpp
trunk/ii02314/task_03/scr/: CMakeLists.txt  MainUnit.cpp  MainUnit.dfm  MainUnit.h  MakeVertex.cpp  MakeVertex.dfm  MakeVertex.h  Project1.cbproj  Project1.cbproj.local  Project1.cpp  Project1PCH1.h  Unit1.cpp  Unit10.cpp  Unit10.dfm  Unit10.h  Unit11.cpp  Unit11.dfm  Unit11.h  Unit12.cpp  Unit12.dfm  Unit12.h  Unit13.cpp  Unit13.dfm  Unit13.h  Unit2.cpp  Unit2.dfm  Unit2.h  Unit3.cpp  Unit3.dfm  Unit3.h  Unit4.cpp  Unit4.dfm  Unit4.h  Unit5.cpp  Unit5.dfm  Unit5.h  Unit6.cpp  Unit6.dfm  Unit6.h  Unit7.cpp  (+7 more)
trunk/ii02316/task_02/src/: CMakeLists.txt  Lab2.cpp  TASK_02_OTIS_CMAKE.cpp  lab2.cpp
trunk/ii02316/task_03/src/: CMakeLists.txt  main.py
trunk/ii02318/task_01/src/: CMakeLists.txt  laba_1.cpp  main.cpp
trunk/ii02322/task_01/src/: CMakeLists.txt  Source.cpp  otis_main_lab1.cpp  source.cpp
trunk/ii02322/task_02/src/: CMakeLists.txt  Lab2_tl.cpp
trunk/ii02322/task_03/src/: CMakeLists.txt  main.cpp
trunk/ii02401/lab_03/src/: CMakeLists.txt  OTIS3.cpp  OTIS3.py
trunk/ii02405/task_02/src/: CMakeLists.txt  task_02.cpp
trunk/ii02408/task_03/src/: CMakeLists.txt  graph.txt  main.cpp  main.py
trunk/ii02409/task_02/src/: CMakeLists.txt  task_02.cpp
trunk/ii02410/task_01/src/: CMakeLists.txt  Lab1Otis.cpp  OTIS_01.cpp  OTIS_01_task_01.cpp  otis1Otis.cpp
trunk/ii02410/task_03/src/: CMakeLists.txt  main.cpp
trunk/ii02412/task_03/src/: CMakeLists.txt  lab3.cpp  lab3.py
trunk/ii02413/task_03/src/: 1 .html  1 .py  CMakeLists.txt  main2.cpp
trunk/ii02416/task_02/src/: CMakeLists.txt  lab2.cpp
trunk/ii02416/task_03/scr/: CMakeLists.txt  Project1.cbproj.local  Project1.cpp  Unit1.cpp  Unit1.dfm  Unit1.h  Unit2.cpp  Unit2.dfm  Unit2.h  Unit3.cpp  Unit3.h  Unit4.cpp  Unit4.dfm  Unit4.h  Unit5.cpp  Unit5.dfm  Unit5.h  Unit6.cpp  Unit6.dfm  Unit6.h  Unit7.cpp  Unit7.dfm  Unit7.h
trunk/ii02416/task_03/scr/__history/: Unit1.cpp.~1~
trunk/ii02416/task_03/scr/vcl/: ABAccessibility.hpp  ADODB_2K.h  ADODB_2K_SRVR.h  ADODB_XP.h  ADODB_XP_srvr.h  ASPBehavior.hpp  Access_2K_SRVR.h  Access_XP_srvr.h  ActnColorMaps.hpp  ActnCtrls.hpp  ActnMan.hpp  ActnMenus.hpp  ActnPopup.hpp  AppEvnts.hpp  AxCtrls.hpp  BandActn.hpp  ButtonGroup.hpp  Buttons.hpp  CaptionedDockTree.hpp  CategoryButtons.hpp  CheckLst.hpp  CmAdmCtl.hpp  ColorGrd.hpp  CustomizeDlg.hpp  DAO_2K.h  DAO_2K_SRVR.h  DAO_XP.h  DAO_XP_srvr.h  DBActns.hpp  DBCGrids.hpp  DBCtrls.hpp  DBGrids.hpp  DBLogDlg.hpp  DBOleCtl.hpp  DBPWDlg.hpp  Data.Win.ADOConEd.hpp  DdeMan.hpp  Direct2D.hpp  DockTabSet.hpp  ExDispID.hpp  (+246 more)
trunk/ii02416/task_03/src/: CMakeLists.txt  Unit1.cpp  Unit1.dfm  Unit1.h  Unit2.cpp  Unit2.dfm  Unit2.h  Unit3.cpp  Unit4.cpp  Unit4.dfm  Unit4.h  Unit5.cpp  Unit5.dfm  Unit5.h  Unit6.cpp  Unit6.dfm  Unit6.h  Unit7.cpp  Unit7.dfm  Unit7.h
trunk/ii02417/task_02/src/: CMakeLists.txt  otis_laba_2.cpp
trunk/ii02423/task_03/src/: CMakeLists.txt  main.cpp  main.pde  main.py
(+3011 files in other folders)
