cmake_minimum_required(VERSION 3.6)

project(dasfsad)

set(SOURCES lab3.cpp)

# fffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffChoose a unique target name, for example, "MyExecutable"
add_executable(MyExecutable ${SOURCES})
